added placeholder for notices

--- a/templates/partials/infocards/_service-provider-dashcard.html
+++ b/templates/partials/infocards/_service-provider-dashcard.html
@@ -66,6 +66,11 @@
 
                     <div class="stats-card flex-this flex-start">
                         <div><p>0</p></div>
+                        <div class="ml-16"><span>Notices</span></div>
+                    </div>
+
+                    <div class="stats-card flex-this flex-start">
+                        <div><p>0</p></div>
                         <div class="ml-16"><span>Connections</span></div>
                     </div>
 
